# InfoCell

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Ideas.txt  InfoCellsIndexType.drawio  LICENSE-MIT.txt  ReadMe.md  conanfile.txt
data/: line_simple_copy3times.json
doc/: blog.md  compile.md
doc/diagrams/: InfoCellsIndexType.drawio
src/: CMakeLists.txt
src/app/: App.cc  App.h  ArcDb.cc  CMakeLists.txt  Colors.h  Picture.cc  Picture.h  Screen.cc  Screen.h  Scroller.cc  Scroller.h  Solver.cc  Solver.h
src/cells/: Arc.cc  Arc.h  Brain.cc  Brain.h  CMakeLists.txt  CellTest.cc  CellTestBase.cc  CellTestBase.h  Cells.cc  Cells.h  EdgeTest.cc  Log.h  NewCellTest.cc  NewCells.cc  NewCells.h  SVGPrinter.cc  SVGPrinter.h  SVGStructPrinter.cc  SVGStructPrinter.h  StructPrinter.cc  StructPrinter.h  ValuePrinter.cc  ValuePrinter.h
src/config/: ArcFileNames.h  CMakeLists.txt  Config.in.h
src/fsvgui/: CMakeLists.txt
src/fsvgui/component/: component.cpp  component.h
src/fsvgui/dom/: CMakeLists.txt  border.cpp  box.cpp  box.h  box_helper.cpp  box_helper.h  clear_under.cpp  color.cpp  color.h  composite_decorator.cpp  dbox.cpp  elements.h  flex.cpp  flexbox.cpp  flexbox_config.cpp  flexbox_config.h  flexbox_helper.cpp  flexbox_helper.h  gridbox.cpp  hbox.cpp  node.cpp  node.h  node_decorator.cpp  node_decorator.h  paragraph.cpp  reflect.cpp  requirement.h  screen.cpp  screen.h  size.cpp  string.h  take_any_args.h  text.cpp  util.cpp  vbox.cpp
src/fsvgui/util/: autoreset.hpp  ref.hpp
src/main/: CMakeLists.txt  main.cc
src/parser/: CMakeLists.txt  DotWriter.cc  DotWriter.h  Grammar.cc  Grammar.h  HtmlHelper.cc  HtmlHelper.h  MathGrammar.h  Parser.cc  Parser.h  Rule.cc  Rule.h  RuleState.cc  RuleState.h  TestGrammar.h  Value.cc  Value.h
src/tests/: CMakeLists.txt  UnitTester.cc  UnitTester.h
src/util/: ArcTask.cc  ArcTask.h  CMakeLists.txt  Converter.cc  Converter.h  LogMessage.h  Logging.cc  Logging.h
