cmake_minimum_required(VERSION 3.27)

project(synth)

message("CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")

if (CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
list(APPEND CMAKE_MODULE_PATH "e:/Devel/ARC/conan/Release")
list(APPEND CMAKE_PREFIX_PATH "e:/Devel/ARC/conan/Release")
message("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
message("CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}")
elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
list(APPEND CMAKE_MODULE_PATH "e:/Devel/ARC/conan/Release")
list(APPEND CMAKE_PREFIX_PATH "e:/Devel/ARC/conan/Release")
message("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
message("CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}")
else()
list(APPEND CMAKE_MODULE_PATH "e:/Devel/ARC/conan/Debug")
list(APPEND CMAKE_PREFIX_PATH "e:/Devel/ARC/conan/Debug")
endif()

set (CMAKE_CXX_STANDARD 20)

find_package(nlohmann_json)
find_package(utf8cpp REQUIRED)
find_package(ftxui REQUIRED)
find_package(Boost REQUIRED)
find_package(Freetype REQUIRED)
find_package(GTest REQUIRED)
enable_testing()
add_subdirectory(src)