file(TO_NATIVE_PATH "${INFOCELL_ARC_TRAINING_PATH}" INFOCELL_ARC_TRAINING_PATH)
string(REPLACE "\\" "\\\\" INFOCELL_ARC_TRAINING_PATH "${INFOCELL_ARC_TRAINING_PATH}")

file(TO_NATIVE_PATH "${INFOCELL_TTF_FONT_PATH}" INFOCELL_TTF_FONT_PATH)
string(REPLACE "\\" "\\\\" INFOCELL_TTF_FONT_PATH "${INFOCELL_TTF_FONT_PATH}")

configure_file(Config.in.h Config.h ESCAPE_QUOTES)

add_library(config INTERFACE)
target_include_directories(config INTERFACE
    ${CMAKE_CURRENT_BINARY_DIR}
)